--- a/css/main.css
+++ b/css/main.css
@@ -1,16 +1,125 @@
+@font-face {
+	font-family: 'WOODY';
+	src:url('fonts/WOODY.eot');
+	src:url('fonts/WOODY.eot?#iefix') format('embedded-opentype'),
+		url('fonts/WOODY.woff') format('woff'),
+		url('fonts/WOODY.ttf') format('truetype'),
+		url('fonts/WOODY.svg#WOODY') format('svg');
+	font-weight: normal;
+	font-style: normal;
+}
+
 body {
-  font-family: 'Droid Sans', sans-serif;
+  font-family: 'Open Sans', sans-serif;
   color: #ffffff;
   background: #000000;
 }
 
-#title {
-  display: inline-block;
-  padding-right:;
+.section-heading {
+  font-family: 'WOODY';
+  font-size: 1.3em;
+  letter-spacing: .1em;
 }
 
-#awards {
+.paragraph {
+  font-size: 0.9em;
+}
+
+header #masthead #title {
+  display: inline-block;
+  padding: 10px 20px 0px 20px;
+}
+
+header #masthead #awards {
   margin-left: 20px;
   margin-bottom: 30px;
   display: inline-block;
 }
+
+header #masthead-separator {
+  background-color: #ffffff;
+  height: 8px;
+  margin-top: -10px;
+}
+
+#intro {
+  height: 612px;
+  background: url('/img/intro.jpg') no-repeat;
+  -webkit-background-size: contain;
+  -moz-background-size: contain;
+  -o-background-size: contain;
+  background-size: contain;
+  font-family: 'WOODY';
+}
+
+#intro .title {
+  margin-top: 80px;
+  font-size: 1.2em;
+  line-height: 1.7em;
+  letter-spacing: .1em;
+}
+
+#intro .sub-title {
+  margin-top: 20px;
+  font-size: .75em;
+  line-height: 2.2em;
+  letter-spacing: .1em;
+}
+
+#intro .social {
+  margin-top: 20px;
+}
+
+#intro .social a {
+  width: 38px;
+  height: 38px;
+  text-decoration: none;
+  margin-right: 4px;
+}
+
+#nav-and-credits { margin-top: 190px; }
+
+#nav {
+  font-size: .9em;
+  letter-spacing: .1em;
+}
+
+#nav a {
+  color: #ffffff;
+  text-decoration: none;
+}
+
+#nav a:visited {
+  color: #ffffff;
+  text-decoration: none;
+}
+
+#nav ul, #nav li {
+  margin: 0;
+  padding: 0;
+}
+
+#nav li {
+  list-style-type: none;
+  display: inline-block;
+  width: 88px;
+  height: 68px;
+  padding-top: 2px;
+  padding-left: 14px;
+  background-image: url('/img/nav-chalk-mark.png');
+  background-size: 6px auto;
+  background-repeat: no-repeat;
+}
+
+#credits img { margin-left: -32px; }
+
+#info {
+  height: 493px;
+  background-image: url('/img/info.jpg');
+  background-repeat: no-repeat;
+  -webkit-background-size: contain;
+  -moz-background-size: contain;
+  -o-background-size: contain;
+  background-size: contain;
+}
+#info p { width: 410px; }
