Added favicon. Reduced height of intro. Plain black footer.

--- a/css/main.css
+++ b/css/main.css
@@ -62,12 +62,12 @@ header #masthead-separator {
 }
 
 #intro {
-  height: 612px;
+  height: 544px;
   background-image: url('/img/intro.jpg');
 }
 
 #intro .title {
-  margin-top: 80px;
+  margin-top: 60px;
   font-size: 1.2em;
   line-height: 1.7em;
   letter-spacing: .1em;
@@ -91,7 +91,7 @@ header #masthead-separator {
   margin-right: 4px;
 }
 
-#nav-and-credits { margin-top: 190px; }
+#nav-and-credits { margin-top: 132px; }
 
 #nav {
   font-size: .9em;
@@ -172,15 +172,10 @@ header #masthead-separator {
 
 footer {
   height: 60px;
-  background-image: url('/img/footer-background.jpg');
-  background-size: auto 60px;
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Open Sans Condensed', sans-serif;
   font-size: .8em;
 }
 
 footer .grid .unit {
-  padding-top: 21px;
-  padding-bottom: 21px;
+  padding: 20px;
 }
-footer #copyright { padding-left: 40px; }
-footer #email { padding-right: 40px; }
