--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="/css/gridism.css" type="text/css">
     <link rel="stylesheet" href="/css/normalize.css" type="text/css">
     <link rel="stylesheet" href="/css/main.css" type="text/css">
-    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans" type="text/css">
+    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans|Open+Sans+Condensed:300" type="text/css">
+    <link rel="icon" href="/img/favicon.png">
   </head>
   <body class="wrap">
     {{ content }}
