--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,21 +17,25 @@
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
     <script src="/js/bootstrap.min.js"></script>
     <script>
+    // Enable left and right arrow keys to control the carousel.
     $(document).keydown(function(e) {
-      // Enable left and right arrow keys to control the carousel.
       var $carousel = $('#image-carousel');
       switch (e.which) {
         case 37: // left
-        $carousel.carousel('prev');
-        break;
-
+          $carousel.carousel('prev');
+          break;
         case 39: // right
-        $carousel.carousel('next');
-        break;
-
+          $carousel.carousel('next');
+          break;
         default: return;
       }
       e.preventDefault();
+    });
+
+    // Scroll to the top of the page when .top is clicked.
+    $('a.top').click(function(e) {
+      e.preventDefault();
+      $("html, body").animate({ scrollTop: 0 }, "slow");
     });
     </script>
   </body>
