--- a/css/main.css
+++ b/css/main.css
@@ -28,12 +28,21 @@ a:hover, a:active {
 }
 
 .background-cover {
+  position: relative;
   font-family: 'WOODY';
   background-repeat: no-repeat;
   -webkit-background-size: contain;
   -moz-background-size: contain;
   -o-background-size: contain;
   background-size: contain;
+}
+
+.top {
+  right: 20px;
+  bottom: 20px;
+  position: absolute;
+  width: 16px;
+  height: 16px;
 }
 
 .section-heading {
@@ -58,8 +67,8 @@ header #masthead #awards {
 }
 
 header #masthead-separator {
-  height: 13px;
-  margin-top: -12px;
+  height: 10px;
+  margin-top: -8px;
   background-image: url('/img/masthead-separator.png');
   background-size: auto 13px;
   background-repeat: no-repeat;
