Made video section responsive.

--- a/css/main.css
+++ b/css/main.css
@@ -209,6 +209,11 @@ header #masthead-separator {
   width: 460px;
   margin: 0px;
 }
+@media all and (max-width: 500px) {
+  #video #video-thumbnails {
+    width: 100%;
+  }
+}
 
 #video #video-thumbnails img { margin-bottom: 10px; }
 
@@ -219,7 +224,11 @@ header #masthead-separator {
   letter-spacing: .1em;
   line-height: 1.6em;
 }
-
+@media all and (max-width: 500px) {
+  .quote {
+    font-size: .9em;
+  }
+}
 .quoter {
   font-family: 'Open Sans', sans-serif;
   font-size: 1em;
