--- a/css/main.css
+++ b/css/main.css
@@ -56,6 +56,12 @@ a:hover, a:active {
   letter-spacing: .1em;
 }
 
+.section-sub-heading {
+  font-family: 'WOODY';
+  font-size: 1em;
+  letter-spacing: .1em;
+}
+
 .paragraph {
   font-size: 0.9em;
 }
